--- a/requirements.txt
+++ b/requirements.txt
@@ -1,176 +1,47 @@
-altair==5.3.0
-annotated-types==0.7.0
-anyio==3.7.1
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-async-lru==2.0.3
-attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
+altair==5.4.0
+attrs==24.2.0
 blinker==1.8.2
-cachetools==5.4.0
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
+cachetools==5.5.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-comm==0.1.3
-comtypes==1.2.0
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-docopt==0.6.2
-EasyProcess==1.1
-entrypoint2==1.1
-et-xmlfile==1.1.0
-executing==1.2.0
-fastapi==0.112.0
-fastjsonschema==2.18.0
-fqdn==1.5.1
-ghp-import==2.1.0
 gitdb==4.0.11
 GitPython==3.1.43
-h11==0.14.0
-idna==3.4
-ipykernel==6.24.0
-ipython==8.12.3
-ipython-genutils==0.2.0
-ipywidgets==8.0.7
-isoduration==20.11.0
-jedi==0.18.2
-Jinja2==3.1.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.18.4
-jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter-lsp==2.2.0
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server==2.7.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.3
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.8
-jupyterlab_server==2.24.0
-Markdown==3.6
+idna==3.8
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib-inline==0.1.6
+MarkupSafe==2.1.5
 mdurl==0.1.2
-mergedeep==1.3.4
-messagebox==0.1.0
-mistune==3.0.1
-mkdocs==1.6.0
-mkdocs-autorefs==1.0.1
-mkdocs-get-deps==0.2.0
-mkdocs-material==9.5.31
-mkdocs-material-extensions==1.3.1
-mkdocstrings==0.25.2
-MouseInfo==0.1.3
-mss==9.0.1
-nbclient==0.8.0
-nbconvert==7.16.4
-nbformat==5.9.1
-nest-asyncio==1.5.6
-notebook==7.0.0
-notebook_shim==0.2.3
-numpy==1.26.1
-opencv-python==4.8.1.78
-openpyxl==3.1.2
-overrides==7.3.1
-packaging==23.1
-paginate==0.5.6
-pandas==2.1.1
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.12.1
-pickleshare==0.7.5
-Pillow==10.0.1
-pipreqs==0.5.0
-platformdirs==3.9.1
-prometheus-client==0.17.1
-prompt-toolkit==3.0.39
+narwhals==1.5.4
+numpy==2.1.0
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+pipdeptree==2.23.1
 protobuf==5.27.3
-psutil==5.9.5
-pure-eval==0.2.2
 pyarrow==17.0.0
-PyAutoGUI==0.9.54
-pycparser==2.21
-pydantic==2.8.2
-pydantic_core==2.20.1
 pydeck==0.9.1
-PyGetWindow==0.0.9
 Pygments==2.18.0
-pymdown-extensions==10.9
-PyMsgBox==1.0.9
-pyodbc==5.1.0
-pyperclip==1.8.2
-pypiwin32==223
-pypng==0.20220715.0
-PyRect==0.2.0
-pyscreenshot==3.1
-PyScreeze==0.1.29
-pyshorteners==1.0.1
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pyttsx3==2.90
-pytweening==1.0.7
-pytz==2023.3.post1
-pywin32==306
-pywinpty==2.0.11
-PyYAML==6.0.1
-pyyaml_env_tag==0.1
-pyzmq==25.1.0
-qrcode==7.4.2
-qtconsole==5.4.3
-QtPy==2.3.1
-referencing==0.30.0
-regex==2024.7.24
-reportlab==4.0.7
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+redis==5.0.8
+referencing==0.35.1
+requests==2.32.3
 rich==13.7.1
-rpds-py==0.9.2
-scipy==1.11.4
-Send2Trash==1.8.2
+rpds-py==0.20.0
 six==1.16.0
 smmap==5.0.1
-sniffio==1.3.0
-sounddevice==0.4.6
-soupsieve==2.4.1
-stack-data==0.6.2
-starlette==0.37.2
+spotipy==2.24.0
 streamlit==1.37.1
+streamlit-elements==0.1.0
+streamlit-player==0.1.5
 tenacity==8.5.0
-terminado==0.17.1
-tinycss2==1.2.1
 toml==0.10.2
-toolz==0.12.1
-tornado==6.3.2
-traitlets==5.9.0
-typing_extensions==4.9.0
-tzdata==2023.3
-uri-template==1.3.0
-urllib3==2.0.4
-uvicorn==0.30.5
-watchdog==4.0.1
-wavio==0.0.8
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.1
-widgetsnbextension==4.0.8
-wikipedia==1.4.0
-win10toast==0.9
-win11toast==0.32
-winsdk==1.0.0b10
-xlrd==2.0.1
-yarg==0.1.9
+tornado==6.4.1
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+watchdog==4.0.2
